--- a/ASSIGNMENT01/views/knowme.hbs
+++ b/ASSIGNMENT01/views/knowme.hbs
@@ -1,6 +1,8 @@
-<!-- here starts the know ME parrt-->
+<h1 id="knowme">Get to know me!!</h1><br>
+<table class="center"><tr>
 <div class="container mt-3">
-  <img src="/images/js-logo.png" alt="js-logo" class="logo"><br>
+  <td><img src="/images/js-logo.png" alt="js-logo" class="logo"><br>
+  <!--adding collapse button -->
   <a href="#statement" class="btn btn-primary" data-bs-toggle="collapse">Skills</a>
   <div id="statement" class="collapse">
   I possess proficient skills in JavaScript, HTML, and CSS, making me well-versed in front-end web development. In JavaScript, 
@@ -11,11 +13,10 @@
   my expertise in CSS allows me to style and design visually appealing interfaces, employing techniques such as flexbox and grid layouts. 
   With a keen eye for detail and a commitment to staying updated on the latest web development trends,
    I am capable of producing seamless and responsive user experiences across various platforms.
-  </div>
-
-
-<div class="container mt-3">
+  </div></td>
+<td>
   <img src="/images/ps-logo.png" alt="ps-logo" class="logo"><br>
+  <!--adding collapse button -->
   <a href="#statement" class="btn btn-primary" data-bs-toggle="collapse">Problem solving skills</a>
   <div id="statement" class="collapse">
    I take pride in my strong problem-solving skills, which I have honed through various challenges and projects. I possess a systematic 
@@ -29,3 +30,7 @@
     environment. These problem-solving skills contribute not only to my success in 
    programming but also to my effectiveness in addressing challenges across different domains.
   </div>
+  </td>
+</div>
+  </tr>
+  </table>
