--- a/ASSIGNMENT01/public/stylesheets/style.css
+++ b/ASSIGNMENT01/public/stylesheets/style.css
@@ -87,3 +87,9 @@ font-family: Georgia, 'Times New Roman', Times, serif;
   font-weight: bold;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
+.center{
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
