--- a/ASSIGNMENT01/views/knowme.hbs
+++ b/ASSIGNMENT01/views/knowme.hbs
@@ -1,19 +1,27 @@
-<h1 id="knowme">Get to know me!!</h1><br>
-<table class="center"><tr>
-<div class="container mt-3">
-  <td><img src="/images/js-logo.png" alt="js-logo" class="logo"><br>
+<br>
+<h1 id="knowme">Get to know me!!</h1>
+
+<table class="center">
+  <tr>
+  <div class="container mt-3">
+    <td>
+      <img src="/images/js-logo.png" alt="js-logo" class="logo">
+  <br>
   <!--adding collapse button -->
-  <a href="#statement" class="btn btn-primary" data-bs-toggle="collapse">Skills</a>
-  <div id="statement" class="collapse">
-  I possess proficient skills in JavaScript, HTML, and CSS, making me well-versed in front-end web development. In JavaScript, 
-  I am adept at crafting dynamic and interactive web applications, 
-  utilizing features like DOM manipulation and asynchronous programming. My proficiency in HTML enables 
-  me to create well-structured and semantic web pages, 
-  ensuring accessibility and search engine optimization. Additionally, 
-  my expertise in CSS allows me to style and design visually appealing interfaces, employing techniques such as flexbox and grid layouts. 
-  With a keen eye for detail and a commitment to staying updated on the latest web development trends,
-   I am capable of producing seamless and responsive user experiences across various platforms.
-  </div></td>
+      <a href="#statement" class="btn btn-primary" data-bs-toggle="collapse">
+        Skills
+      </a>
+      <div id="statement" class="collapse">
+        I possess proficient skills in JavaScript, HTML, and CSS, making me well-versed in front-end web development. In JavaScript, 
+        I am adept at crafting dynamic and interactive web applications, 
+        utilizing features like DOM manipulation and asynchronous programming. My proficiency in HTML enables 
+        me to create well-structured and semantic web pages, 
+        ensuring accessibility and search engine optimization. Additionally, 
+        my expertise in CSS allows me to style and design visually appealing interfaces, employing techniques such as flexbox and grid layouts. 
+        With a keen eye for detail and a commitment to staying updated on the latest web development trends,
+        I am capable of producing seamless and responsive user experiences across various platforms.
+      </div>
+  </td>
 <td>
   <img src="/images/ps-logo.png" alt="ps-logo" class="logo"><br>
   <!--adding collapse button -->
