--- a/ASSIGNMENT01/views/layout.hbs
+++ b/ASSIGNMENT01/views/layout.hbs
@@ -31,7 +31,7 @@
 
   <!-- this part of code displays the number of slide show by points at the bottom -->
   <div class="carousel-indicators">
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+    {{!-- <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button> --}}
     <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
   </div>
   
@@ -60,7 +60,7 @@
   <button class="carousel-control-prev" type="button" data-bs-target="#" data-bs-slide="prev">
     <span class="carousel-control-prev-icon"></span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#" data-bs-slide="next">
+  <button class="carousel-control-next" type="button" data-bs-target="#" data-bs-slide="next" onclick={()=>}>
     <span class="carousel-control-next-icon"></span>
   </button>
   </div>
