--- a/ASSIGNMENT02/views/signin.hbs
+++ b/ASSIGNMENT02/views/signin.hbs
@@ -1,4 +1,6 @@
+<!--This part of code is for signin page  -->
 <br><br>
+<!-- I have created a form where one can sign-in -->
 <form >
     <h1>
     Sign-in
@@ -19,7 +21,7 @@
         <button type="submit">Login</button>
     </fieldset>
     <fieldset><br>
-    <p>Create Account?<a href="signup.hbs">Sign-up</a></p>
+    <p>Create Account?<a href="signup">Sign-up</a></p>
     
     </fieldset>
 </form><br><br>
