--- a/ASSIGNMENT02/public/stylesheets/style.css
+++ b/ASSIGNMENT02/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #333;
 }
 footer{
   background-color: #333;
