--- a/ASSIGNMENT02/views/signup.hbs
+++ b/ASSIGNMENT02/views/signup.hbs
@@ -1,6 +1,8 @@
 
+<!--This part of code is for signup page  -->
 <br><br>
-<form class="form" method="post" action="/signup.hbs">
+<!-- I have created a form where one can sign-up -->
+<form class="form" method="post" action="/signup">
     <h1>
     Sign-up
 </h1>
@@ -20,7 +22,7 @@
         <button type="submit" id="submit">Submit</button>
     </fieldset><br>
     <fieldset>
-    <p>Already have account?<a href="signin.hbs">Sign-in</a></p>
+    <p>Already have account?<a href="signin">Sign-in</a></p>
     
     </fieldset>
 </form><br><br>
