--- a/ASSIGNMENT02/views/home.hbs
+++ b/ASSIGNMENT02/views/home.hbs
@@ -1,7 +1,9 @@
 
+ <!-- Home page for my website -->
   <table><h1 id="project">COMEDY</h1><br>
     <tr><td>
   <div class="container mt-3">
+    <!--Added card element to arrange different genres -->
   <div class="card">
     <img class="card-img-top" src="/images/jokebookcomedy.png" alt="Card image">
     <div class="card-body">
