--- a/clothing-style-app/views/layout.hbs
+++ b/clothing-style-app/views/layout.hbs
@@ -1,10 +1,27 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
-    {{{body}}}
+    <div class="container">
+        {{> navbar}}
+    <div class="mt-3">
+        {{#if error}}
+        <div class="alert alert-danger">{{error}}</div>
+        {{/if}}
+
+        {{#if success}}
+        <div class="alert alert-success">{{success}}</div>
+        {{/if}}
+    </div>
+      {{{body}}}
+
+     {{> footer}}
+    </div>
   </body>
 </html>
