--- a/clothing-style-app/views/partials/navbar.hbs
+++ b/clothing-style-app/views/partials/navbar.hbs
@@ -4,6 +4,7 @@
   </div>
   <ul class="nav navbar-nav">
     <li><a href="/">Home</a></li>
+    <li><a href="/clothing">Clothing</a></li>
     <li><a href="/about">About</a></li>
     <li><a href="/contact">Contact</a></li>
     {{#if user}}
